<resources>
    <string name="app_name">WChat</string>
    <string name="title_home">会话</string>
    <string name="title_dashboard">好友</string>
    <string name="title_notifications">我的</string>
    <string name="et_account_hint">手机</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="new_user">新用户</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入手机号</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="all">全部</string>
    <string name="group">分组</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="confirm">确认</string>
    <string name="retrieve_pass">找回密码</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群组</string>
    <string name="scan">扫一扫</string>
    <string name="add_friend_hint">请输入好友手机/群号</string>
    <string name="send_msg">发消息</string>
    <string name="delete_friend">删除好友</string>
    <string name="friend_info">好友信息</string>
    <string name="send">发送</string>

</resources>
