<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/acm_inputbox"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/et_account_hint"
            android:inputType="phone"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:hint="@string/input_verify_code"
                android:padding="5dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/devide_line" />

            <Button
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@color/green"
                android:gravity="center"
                android:text="@string/get_verify_code"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:background="@drawable/login_et_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="5dp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/confirm"
        android:textColor="@color/whites"
        android:textSize="18sp" />


</LinearLayout>
