<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <RelativeLayout
        android:id="@+id/cmy_avator_relative"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="7dp">

        <com.thugkd.view.CircleImageView
            android:id="@+id/mine_avator"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:src="@drawable/head"
            app:civ_border_color="@color/whites"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/mine_avator"
            android:text="nickName" />


        <ImageView
            android:id="@+id/star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/nick_name"
            android:layout_below="@+id/nick_name"
            android:layout_marginTop="7dp"
            android:src="@drawable/star" />

        <ImageView

            android:id="@+id/star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/star_1"
            android:layout_toRightOf="@+id/star_1"
            android:src="@drawable/star" />

        <ImageView

            android:id="@+id/star_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/star_2"
            android:layout_toRightOf="@+id/star_2"
            android:src="@drawable/star" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/devide_line" />

    <RelativeLayout
        android:id="@+id/my_sign_relative"

        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="个性签名:" />

        <TextView
            android:id="@+id/sign_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/sign"
            android:paddingRight="20dp"
            android:text="信念和勇气可以创造奇迹！" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mine_linear_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:id="@+id/my_wallet_relative"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/phone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:id="@+id/phoneNum"
                android:layout_toRightOf="@id/phone"
                android:text="18710896384" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:id="@+id/my_collection_relative"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/nick"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/nick" />

            <EditText
                android:id="@+id/nick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/nick"
                android:background="@null"
                android:text="@string/app_name" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />

        <RelativeLayout
            android:id="@+id/my_album_relative"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/location"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/location"
                android:text="中国，西安" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/devide_line" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_mine_exit_relative"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/send_msg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/send_msg"
            android:textColor="@color/whites"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delete_friend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/exit_btn"
            android:text="@string/delete_friend"
            android:textColor="@color/whites"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>